# stremio-downloader

./: .gitignore  README.md  main.js  package-lock.json  package.json
.github/workflows/: release.yml  version-sync.yml
downloader/: index.html  script.js  styles.css
lib/: addon.js  api.js  cookieJar.js  download.js  downloadDir.js  ffmpeg.js  inject.html  injectHead.html  instanceLock.js  logger.js  metaDir.js  proxy.js  runtime.js  server.js  shellStorage.js  sourceKind.js  systemShell.js  tokenDir.js  updateCheck.js  userDir.js  userSettings.js
packaging/windows-launcher/: Program.cs  StremioDownloader.WindowsLauncher.csproj
scripts/: check-version-sync.js  cleanup-generated.js  create-windows-self-extractor.js  desktop-sidecar.js  finalize-tauri-build.js  install-git-hooks.js  package-windows-release.js  prepare-node-sidecar.js  run-tauri-build.js  sanitize-tauri-target-cache.js  stage-desktop-runtime.js  start.js  sync-version.js  version-utils.js
scripts/git-hooks/: pre-commit
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: main.rs
tauri/static/: index.html
