[package]
name = "stremio-downloader-desktop"
version = "2.1.1"
description = "Stremio Downloader desktop shell"
authors = ["Kyle"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
url = "2"

[profile.release]
strip = true
